new file:   Bitcoin-Trading-Bot 	new file:   "pages/3_\360\237\232\200_Projet_Trading_Bot.py" 	deleted:    "pages/3_\360\237\247\256_Pricing_Options.py" 	modified:   requirements.txt 	modified:   Bitcoin-Trading-Bot (modified content, untracked content)

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,13 @@ numpy
 yfinance
 matplotlib
 plotly
+streamlit
+pandas
+pandas-ta
+yfinance
+alpaca-trade-api
+backtesting
+matplotlib
+pyarrow
+python-dotenv
+ccxt
